force-app/main/default/objects/Log__c/fields/Callout_Error__c.field-meta.xml
<CustomField>
    <fullName>Callout_Error__c</fullName>
    <description>Contendrá la información si la llamada falla.</description>
    <label>Callout Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>