force-app/main/default/objects/Log__c/fields/End_Record__c.field-meta.xml
<CustomField>
    <fullName>End_Record__c</fullName>
    <label>End Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>