force-app/main/default/objects/Log__c/fields/Endpoint_WS__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_WS__c</fullName>
    <label>Endpoint WS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>