force-app/main/default/objects/Log__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>Contendrá el request body que se envía al servicio externo</description>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>