force-app/main/default/objects/Log__c/fields/Result_Icon__c.field-meta.xml
<CustomField>
    <fullName>Result_Icon__c</fullName>
    <formula>IMAGE( 
CASE( TEXT(Result__c) , 
&quot;Success&quot;, &quot;/img/msg_icons/confirm24.png&quot;, 
&quot;Warning&quot;, &quot;/img/msg_icons/warning24.png&quot;, 
&quot;Error&quot;, &quot;/img/msg_icons/error24.png&quot;, 
&quot;/s.gif&quot;), 
&quot;Result&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result Icon</label>
    <type>Text</type>
</CustomField>