force-app/main/default/objects/Log__c/fields/Server_Response__c.field-meta.xml
<CustomField>
    <fullName>Server_Response__c</fullName>
    <label>Server Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>