force-app/main/default/objects/Log__c/fields/Start_Record__c.field-meta.xml
<CustomField>
    <fullName>Start_Record__c</fullName>
    <label>Start Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>