force-app/main/default/objects/Log__c/fields/Warning_Records__c.field-meta.xml
<CustomField>
    <fullName>Warning_Records__c</fullName>
    <label>Warning Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>