force-app/main/default/objects/Log__c/recordTypes/Inbound.recordType-meta.xml
<RecordType>
    <fullName>Inbound</fullName>
    <active>true</active>
    <description>Recordtype que se usará para almacenar logs tipo inbound</description>
    <label>Inbound</label>
</RecordType>