force-app/main/default/objects/Log__c/recordTypes/Outbound.recordType-meta.xml
<RecordType>
    <fullName>Outbound</fullName>
    <active>true</active>
    <label>Outbound</label>
</RecordType>