force-app/main/default/objects/Log__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Apex_Class_Name__c</columns>
    <columns>Apex_Method_Name__c</columns>
    <columns>Result_Icon__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:15</value>
    </filters>
    <label>Todos</label>
</ListView>